ocaml/corpus/comments.txt
==============================
Comments
==============================

(**)
(* *)
(**
  doc
*)
( *)

---

(compilation_unit
  (comment)
  (comment)
  (comment)
  (expression_item (value_path (operator_name (infix_operator)))))

==============================
Strings and comments
==============================

(* "*)" *)
"(**)";;
"(*";;

---

(compilation_unit
  (comment)
  (expression_item (string))
  (expression_item (string)))

==============================
Characters and comments
==============================

(* '"' *)
(* f' '"' *)
(*  *)
(* '\o170' '"' *)
(* '\'"' *)
(* '\" " *)
(* '" " *)
(* '*)
x

---

(compilation_unit
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (expression_item (value_path (value_name))))

==============================
Quoted strings and comments
==============================

(* {|*)|} *)
(* {%id |*)|} *)
{|(**)|};;
{|(*|};;

---

(compilation_unit
  (comment)
  (comment)
  (expression_item (quoted_string))
  (expression_item (quoted_string)))
